# agents_project

./: .gitignore  README.md
adp/: agentic_doc_processing.ipynb  pyproject.toml  requirements.txt
adp/.ipynb_checkpoints/: agentic_doc_processing-checkpoint.ipynb  requirements-checkpoint.txt
adp/results/receipt/: receipt.json  receipt.md  receipt_model.json
scalable_capital_iaac/: main.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
scalable_capital_iaac/lambda/: add_order.py  process_order.py
test_agent/: pyproject.toml
