[tool.poetry]
name = "test-agent"
version = "0.1.0"
description = "building agents with langgraph"
authors = ["chibuikeeugene <chibuikeeugene@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.3.5"
langgraph = "^0.2.69"
langgraph-sdk = "^0.1.51"
langgraph-cli = "^0.1.70"
langgraph-checkpoint-sqlite = "^2.0.3"
langsmith = "^0.3.5"
langchain-community = "^0.3.16"
langchain-core = "^0.3.33"
tavily-python = "^0.5.0"
wikipedia = "^1.4.0"
trustcall = "^0.0.34"
langchain-ollama = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
